user profile stats

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
-<!-- //data-theme="cyberpunk" -->
-<html >
+
+<html data-theme="luxury" >
   <head >
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
